# 3dcg_watercolor

./: .gitignore  CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/include/framework/: array_2d.h  shader.h  texture.h  trackball.h  vertexarray.h  vertexbuffer.h
framework/src/: SimplexNoise.cpp  mesh.cpp  shader.cpp  texture.cpp  trackball.cpp  vertexarray.cpp  vertexbuffer.cpp
shaders/: circle_frag.glsl  circle_vertex.glsl  lambert_frag.glsl  line_frag.glsl  line_vertex.glsl  paper_frag.glsl  paper_vertex.glsl  plane_frag.glsl  plane_vertex.glsl  vertex.glsl
src/: camera.cpp  camera.h  cell.cpp  cell.h  circle.cpp  circle.h  global_constants.h  heightmap.cpp  heightmap.h  main.cpp  main3.cpp  move_pigment.cpp  move_pigment.h  move_water.cpp  move_water.h  pigment.cpp  pigment.h  staggered_grid.cpp  staggered_grid.h
src/paper/: terrain.cpp  terrain.h  triangle_list.h
